[gd_scene load_steps=8 format=2]

[ext_resource path="res://font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://AnswersStyle.tres" type="StyleBox" id=3]
[ext_resource path="res://DMX Control.gd" type="Script" id=4]

[sub_resource type="InputEventAction" id=1]
action = "ui_accept"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
border_width_top = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )
shadow_color = Color( 0, 0, 0, 0.333333 )
shadow_size = 1
shadow_offset = Vector2( 0, 5 )

[node name="Main" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 1040.0 ]
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Button" type="Button" parent="CanvasLayer"]
margin_left = 56.0
margin_top = 944.0
margin_right = 280.0
margin_bottom = 1044.0
custom_fonts/font = ExtResource( 1 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -136.0
margin_right = 100.0
margin_bottom = -36.0
custom_fonts/font = ExtResource( 1 )
shortcut = SubResource( 2 )
text = "Weiter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.878431, 0.807843, 0.752941, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Question" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 640.0
margin_top = 50.0
margin_right = 1280.0
margin_bottom = 192.0
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Frage"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Antwort1" type="Label" parent="."]
margin_left = 197.172
margin_top = 250.0
margin_right = 557.172
margin_bottom = 850.0
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 1 )
text = "1"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Antwort2" type="Label" parent="."]
margin_left = 780.0
margin_top = 250.0
margin_right = 1140.0
margin_bottom = 850.0
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 1 )
text = "2"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Antwort3" type="Label" parent="."]
margin_left = 1320.0
margin_top = 250.0
margin_right = 1680.0
margin_bottom = 850.0
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 1 )
text = "3"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DMXControl" type="Node" parent="."]
script = ExtResource( 4 )

[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/Button2" to="." method="_on_Button2_pressed"]
